objects/Rosco_Tag__c/Rosco_Tag__c.object-meta.xml
<CustomObject>
    <label>Rosco_Tag</label>
    <nameField>
        <label>title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rosco_Tags</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>