objects/Rosco_Tag__c/fields/casecomment__c.field-meta.xml
<CustomField>
    <fullName>casecomment__c</fullName>
    <label>casecomment</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>