objects/Rosco_Tag__c/fields/moreinfo__c.field-meta.xml
<CustomField>
    <fullName>moreinfo__c</fullName>
    <label>moreinfo</label>
    <type>Url</type>
</CustomField>