objects/Rosco_Tag__c/fields/rfedisplace__c.field-meta.xml
<CustomField>
    <fullName>rfedisplace__c</fullName>
    <label>rfedisplace</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>