objects/Rosco_Tag__c/fields/rfestory__c.field-meta.xml
<CustomField>
    <fullName>rfestory__c</fullName>
    <label>rfestory</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>