objects/Rosco_Tag__c/fields/solution__c.field-meta.xml
<CustomField>
    <fullName>solution__c</fullName>
    <label>solution</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>