objects/Rosco_Tag__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Ready for KB</fullName>
            </value>
            <value>
                <fullName>Promoted to KB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>