objects/Rosco_Tag__c/fields/Tag_Number__c.field-meta.xml
<CustomField>
    <fullName>Tag_Number__c</fullName>
    <displayFormat>{00000}</displayFormat>
    <label>Tag Number</label>
    <type>AutoNumber</type>
</CustomField>