objects/Rosco_Tag__c/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <label>type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JIRA</fullName>
            </value>
            <value>
                <fullName>Solution Object (SO)</fullName>
            </value>
            <value>
                <fullName>Request for Enhancement (RFE)</fullName>
            </value>
            <value>
                <fullName>Legacy (String)</fullName>
            </value>
            <value>
                <fullName>KB Candidate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>